scalability for dummies 글을 형식에 맞춰서 파일명 변경

--- a/posts/scalability-for-dummies/index.mdx
+++ b/posts/scalability-for-dummies/index.mdx
@@ -5,6 +5,8 @@ content: about scalability
 category: All, Scalability, BE
 ---
 
+> 작성자 : 제이든
+
 다음은 Le Cloud Blog의 Sebastian Kreutzberger가 작성한 Scalability for Dummies 글을 claude로 번역한 글입니다.
 
 ## Scalability for Dummies - Part 1: Clones
